# template_service

./: .env.example  .pylintrc  Dockerfile.prod  GIT_COMMIT_GUIDE.md  PROJECT_STRUCTURE_SUMMARY.md  README.md  README_COMPREHENSIVE.md  RESTRUCTURING_REPORT.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml  deploy.yml
app/: api.py  crud.py  database.py  dependencies.py  main.py  models.py
app/core/: config.py
services/: cache.py
tests/: conftest.py
tests/integration/: test_template_api.py
tests/unit/: test_cache_service.py  test_models.py
